--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "git-web-services",
+  "name": "back-server-test",
   "version": "1.0.0",
   "description": "service test",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "node app",
     "test": "echo \\\"Error: no test specified\\\" && exit 1"
   },
   "repository": {
